--- a/nginx.conf
+++ b/nginx.conf
@@ -41,7 +41,7 @@ http {
     client_max_body_size 75M;
 
     # set the correct host(s) for your site
-    server_name rubenvoss.com www.rubenvoss.com rubenvoss.de, www.rubenvoss.de, 142.132.167.74;
+    server_name rubenvoss.de, www.rubenvoss.de;
 
     keepalive_timeout 5;
 
