--- a/nginx.conf
+++ b/nginx.conf
@@ -35,13 +35,23 @@ http {
   }
 
   server {
-    # use 'listen 80 deferred;' for Linux
-    # use 'listen 80 accept_filter=httpready;' for FreeBSD
     listen 80;
+
+    server_name rubenvoss.de;
+
+    return 301 https://$server_name$request_uri;
+  }
+
+  server {
+
+    listen 443 ssl;
     client_max_body_size 75M;
 
-    # set the correct host(s) for your site
-    server_name rubenvoss.de, www.rubenvoss.de;
+    server_name rubenvoss.de;
+    ssl_certificate     /etc/letsencrypt/live/rubenvoss.de/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/rubenvoss.de/privkey.pem;
+
+
 
     keepalive_timeout 5;
 
@@ -77,5 +87,6 @@ http {
     location = /500.html {
       root /srv/www/rubens_blog/rubens_blog/posts/static;
     }
+
   }
 }
